# PromoData-Task

./: README.md  pyproject.toml
src/crawler/: __main__.py  cli.py  configurator.py  exceptions.py  parser.py  types.py
