[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "A crawler for bethowen.ru"
authors = ["Ilyas Kalandar <ilyas_kalandar@outlook.com>"]
license = "Apache"
readme = "README.md"
packages = [{include="crawler", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
dynaconf = "^3.2.6"
requests = "^2.32.3"
bs4 = "^0.0.2"
redis = "^5.0.8"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
